# capstone_project_slackbotjeffc

./: .gitignore  AGENTS.md  GITHUB_PUSH_GUIDE.md  GITHUB_SETUP.md  PANDASAI_INTEGRATION.md  PROJECT_CONTEXT.md  README.md  TESTING_GUIDE.md  VALUE_PROPOSITION.md  check_pandasai_version.py  handlers.py  main.py  pyproject.toml  pytest.ini  router.py
core/: __init__.py  app.py
core/handlers/: __init__.py  error_handlers.py  mention_handlers.py  message_handlers.py
core/services/: pandasai_service.py
core/subsystem_1/: router.py
core/subsystem_2/: pandas_agent.py
project_name/: __init__.py  app.py
project_name/handlers/: error_handlers.py  mention_handlers.py
project_name/services/: pandasai_service.py
project_name/subsystem_1/: router.py
project_name/subsystem_2/: __init__.py  pandas_agent.py
semantic_layer/: README.md  payments.yml  semantic_layer.yml  sessions.yml  subscriptions.yml  users.yml
tests/: README.md  __init__.py  conftest.py  test_pandas_agent.py  test_pandasai_service.py  test_router.py
