[tool.poetry]
name = "capstone-project-slackbotjeffc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
slack-bolt = "^1.27.0"
slack-sdk = "^3.39.0"
python-dotenv = "<1.2.0"
psycopg2-binary = "^2.9.11"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


